# biochem-db

./: .gitignore  .workon  README.md  distances.json  eval_reports.json  pyproject.toml
docs/: TODO-wk7.md
drug-discovery-api/: .env.example  .gitignore  README.md  requirements.txt
drug-discovery-api/app/: config.py  main.py
drug-discovery-api/app/db/: database.py
drug-discovery-api/app/models/: analytical_models.py  document_models.py  molecule_models.py  ord_models.py  route_models.py  sample_data.py
drug-discovery-api/app/routers/: analytical.py  documents.py  molecules.py  ord.py  routes.py  sample_data.py
drug-discovery-api/app/services/: ai_service.py  analytical_service.py  document_service.py  molecule_service.py  ord_service.py  route_service.py
drug-discovery-api/db/: eval_retrosynth.py  filtered_has_routes.ndjson  retro_db.sql  retrosynth.py  runtime.txt  visualize_routes.py
src/biochem/: __init__.py  constants.py  db.py  eda.hist.ipy  eda.hist.py  eda.py  etl.py  eval.py  models.py  pubchem_to_ord.py
src/biochem/data/: JSON.json  flatten_testset_name_lists_and_nonunique_df_index_lookup.hist.ipy  flatten_testset_name_lists_and_nonunique_df_index_lookup.hist.py  testset_name_cid_pairs.csv  testset_name_cid_pairs.json  testset_name_lists.json
src/biochem/data/eval/: CID39_eval_report.md  cid_39_zydus_reasoner_baseline_response_line_439.json  prompts_20260318_172554_418146_9783.log.bkp  prompts_20260318_172554_418146_9783.log.json
src/biochem/data/experiment-1/: README.md
src/biochem/llm/: retrosynth.py
src/biochem/smiles/: root_align.py
src/biochem_db/: constants.py  db.py
src/biochem_db/data/eval/: *.jsonl  prompts_20260318_172554_418146_9783.log.jsonl  prompts_20260318_172554_418146_9783.log.ndjson
src/biochem_db/smiles/: root_align_utils.py
src/molextract-app/: install_and_run.sh
src/molextract-app/app/: streamlit_app.py
src/pubchem/: data  etl.py
src/pubchem_api/: __init__.py  annotations.py  config.py  molecular_search.py  rest_api.py  utils.py
src/pubchem_api/alembic/: env.py
