[project]
name = "biochem-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hobs", email = "git@totalgood.com" }
]
requires-python = ">=3.12"
dependencies = [
    "molid>=0.8.4",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
