[project]
name = "biochem"
version = "0.1.1"
description = "Biochem Database for evaluation of retrosynthesis and chemical reaction modeling pipeline."
readme = "README.md"
authors = [
    { name = "corethink", email = "hobson@corethink.ai" }
    ]
requires-python = ">=3.12,<3.13"
dependencies = [
    "editdistance>=0.8.1",
    "jsonlines",
    "molid>=0.8.4",
    "pandas",
    "rdkit",
    "requests",
    "spacy>=3.8.11",
]

[project.optional-dependencies]
all = [
    "biochem[ai,graphics,dev,sql,apps]",
]
ai = [
    "openrouter",
    "google-api-core",
    "google-cloud-storage",
    "google-generativeai",
    "google_cloud_aiplatform",
    "langchain-community",
    "langchain_google_genai",
    "langchain",
    "iso8601"
]
graphics = [
    "keplergl",
    "pydeck",
]
dev = [
    "watchfiles",
    "jupyterlab",
]
sql = [
    "psycopg2-binary",
    "sqlalchemy",
]
apps = [
    "gradio",
    "streamlit-folium",
    "plotly",
#     "voila",
#    "solara",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
